Updated Ellipse Generator

--- a/ellipse/index.html
+++ b/ellipse/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.2/p5.js"></script>
-    <script src="https://unpkg.com/p5.plotsvg@0.1.2/lib/p5.plotSvg.js"></script>
+<html lang="en"><head>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.js"></script>
+    <script src="https://unpkg.com/p5.plotsvg@0.1.4/lib/p5.plotSvg.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
 
   </head>
   <body>
     <main>
     </main>
     <script src="sketch.js"></script>
-  </body>
-</html>
+  
+
+</body></html>
